<resources>
    <string name="app_name">Kozmetické štúdio LS</string>
    <string name="label_search">Hľadat</string>
    <string name="label_settings">Nastavenia</string>
    <string name="label_services">Zákazky</string>
    <string name="label_clients">Zákazníci</string>

    <string name="str">string</string>

    <string name="autofill_name">Name</string>
    <string name="autofill_phone">Phone</string>
    <string name="autofill_email">E-mail</string>

    <string name="autofill_service_name">Service Name</string>
    <string name="autofill_service_price">Service Price</string>

    <string name="default_web_client_id">450227172557-7o789rn2vcvc5chalvf8mt7v95g5ia7q.apps.googleusercontent.com</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">16dp</string>
    <string name="clients_empty">Zoznam klientov prázdny</string>a
    <string name="add_client">Pridať Zákazníka</string>
    <string name="name">"Meno Priezvisko"</string>
    <string name="phone">Telefónne číslo</string>
    <string name="email">E-mail</string>
    <string name="add">Pridať</string>
    <string name="save">Uložiť</string>
    <string name="service_price">Cena</string>
    <string name="services_empty">Zoznam služieb je prádzny!</string>
    <string name="select_client">Zvoľ klienta:</string>
    <string name="client_prompt">Zákazníci</string>
    <string name="service_description">Popis</string>
    <string name="empty_client_list_message">Zoznam klientov prázdny!</string>
    <string name="search_nothing">Žiadne výsledky</string>
    <string name="service_date">Dátum/čas</string>
    <string name="select_date">Dátum</string>
    <string name="select_time">Čas</string>
    <string name="sort">Poradie\n</string>
    <string name="sort_by_name">Podľa mena\n</string>
    <string name="description">Popis</string>
    <string name="price">Cena</string>
    <string name="settings">Nastavenia</string>
    <string name="fragment_clients">Zákazníci</string>
    <string name="fragment_search">Hľadať</string>
    <string name="fragment_services">Zákazky</string>
    <string name="fragment_settings">Nastavenia</string>
    <string name="select_theme">Zmena režimu</string>
    <string name="add_service">Pridať Zákazku</string>
    <string name="select_client_add">Zvoliť Zákazníka</string>
    <string name="popis">Popis: %1$s</string>
    <string name="d_tum">%1$s</string>
    <string name="cena">Cena: %1$s €</string>
    <string name="date_with_date">Dátum: %1$s</string>
    <string name="time_with_time">Čas: %1$s</string>
    <string name="service_added_successfully">Zákazka úspešne pridaná</string>
    <string name="cancel">Zrušiť</string>
    <string name="latest_service_formated">Posledná zákazka: %1$s</string>
    <string name="no_email">No e-mail</string>
    <string name="no_phone">No phone</string>
    <string name="edit">Upraviť</string>
    <string name="client_profile">Profil Zákazníka</string>
    <string name="theme">Režim</string>
    <string name="dark_theme">Tmavý režim</string>
    <string name="light_theme">Svetlý režim</string>
    <string name="system_default">Podľa systému</string>
    <string name="select_from_contacts">Z kontaktov</string>
    <string name="to_do">Zoznam úloh</string>
    <string name="call_client">Telefonát zákazníkovi</string>
    <string name="confirm_call">Naozaj zavolať?</string>
    <string name="yes">Ano</string>
    <string name="no">Nie</string>
    <string name="label_menu">Menu</string>
    <string name="search">Hladať</string>
    <string name="data">Dáta</string>
    <string name="add_type">Pridať Typ</string>
    <string name="add_category">Pridať kategóriu</string>
    <string name="add_category_or_type">Nová Kategória/Typ</string>
    <string name="category_name">Názov kategórie</string>
    <string name="category_emoji">Emoji</string>
    <string name="type_name">Názov</string>
    <string name="type_emoji">Emoji</string>
    <string name="collapse">Menej</string>
    <string name="expand">Viac</string>
    <string name="emoji_label">Značka:</string>
    <string name="emoji_hint">Vložiť emotikon</string>
    <string name="emoji_error">Možné zadať iba emoji!</string>
    <string name="category_label">Kategória:</string>
    <string name="select_category">Zvoliť kategóriu</string>
    <string name="pick_category">Zvoliť</string>
    <string name="choose_profile_picture">Vybrať profilovú fotku</string>
    <string name="select_a_default_color">Zvoliť farbu pozadia:</string>
    <string name="or_upload_an_image">Nahrať obrázok z úložiska:</string>
    <string name="choose_from_gallery">Vybrať z galérie</string>
    <string name="select_service_type">Zvoliť kategóriu/typ</string>
    <string name="please_fill_in_all_fields">Potreba vyplniť všetky polia!</string>
    <string name="label_list_services">Zoznam</string>
    <string name="label_services_type_manager">Manažér zákaziek</string>
    <string name="no_services_found">Nemáte žiadne zákazky</string>
    <string name="delete_client">Vymazať</string>
    <string name="confirm_delete_client">Naozaj si prajete vymazať zákazníka?</string>
    <string name="delete">Vymazať</string>
    <string name="more_options">Viac možností</string>
    <string name="no_clients_found">Nemáte žiadných zákazníkov!</string>
    <string name="database">Databáza</string>
    <string name="delete_database">Vymazať databázu</string>
    <string name="backup_database">Zálohovať databázu</string>
    <string name="confirmation">Ste si istý?</string>
    <string name="delete_database_confirmation">Naozaj si prajete vymazať databázu? Prídete o všetky dáta</string>
    <string name="delete_database_desc">Vymazať databázu</string>
    <string name="backup_database_desc">Zálohovať databázu</string>
    <string name="select_photos">Vybrať z galérie</string>
    <string name="images">Fotky</string>
    <string name="loading_images">Načítavam fotky</string>
    <string name="service_details">Detail zakázky</string>
    <string name="nevybrali_ste_adne_fotky">Nevybrali ste žadne fotky</string>
    <string name="delete_service_confirmation">Vymazať zákazku</string>
    <string name="delete_selected_photos">Vymazať vybrané fotky</string>
    <string name="delete_service">Vymazať zákazku</string>
    <string name="delete_selected_photos_confirmation">Určite vymazať vybrané fotky?</string>
    <string name="pick_photos">Vybrať fotky</string>
    <string name="ok">OK</string>
    <string name="back">Naspať</string>

    <string-array name="theme_options">
        <item>Light</item>
        <item>Dark</item>
        <item>System Default</item>
    </string-array>

    <string-array name="theme_values">
        <item>light</item>
        <item>dark</item>
        <item>system_default</item>
    </string-array>
</resources>