<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.component.service.FragmentAddService">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/clientSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/buttonAddClient"
                android:layout_toLeftOf="@id/buttonAddClient"
                android:prompt="@string/client_prompt"/>

            <Button
                style="@style/MyButton"
                android:id="@+id/buttonAddClient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="+"/>

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MyTextInputLayout"
            android:hint="@string/service_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/autofill_service_name"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MyTextInputLayout"
            android:hint="@string/service_price">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_date"
                style="@style/MyButton"
                />

            <Button
                android:id="@+id/buttonTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_time"
                style="@style/MyButton"
                />

        </LinearLayout>


        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:text="@string/save"
            style="@style/MyButton"
            />

    </LinearLayout>

</ScrollView>
